made pendulum draggable

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <input type="checkbox" name="pviz" onclick="pen_viz = !pen_viz;" checked>
                 <label for ="pviz">Pendula visible</label>
                 <br>
+                <input type="button" value="Pause" onclick="pause_fn()"/>
+                <input type="button" value="Clear" onclick="clear_fn()"/>
                 <input type="button" value="Reset" onclick="reset()"/>
             </div>
             <div id="canvas-container">
